Changes to builder doc
More corrections

Improve EE documentation

https://issues.redhat.com/browse/AAP-24985

--- a/downstream/modules/builder/con-additional-custom-build-steps.adoc
+++ b/downstream/modules/builder/con-additional-custom-build-steps.adoc
@@ -2,39 +2,41 @@
 
 = Additional custom build steps
 
-You can specify custom build commands for any build phase in the `additional_build_steps` section of the definition file. This allows fine-grained control over the build phases.
+You can specify custom build commands for any build phase in the `additional_build_steps` section of the definition file. 
+This enables fine-grained control over the build phases.
 
-Use the `prepend_` and `append_` commands to add directives to the `Containerfile` that run either before or after the main build steps are executed. The commands must conform to any rules required for the runtime system.
+Use the `prepend_` and `append_` commands to add directives to the `Containerfile` that run either before or after the main build steps are executed. 
+The commands must conform to any rules required for the runtime system.
 
-See the following table for a list of values that can be used in `additional_build_steps`:
+The following table shows a list of values that can be used in `additional_build_steps`:
 
 [cols="a,a"]
 |===
 | Value | Description
 
 | `prepend_base`
-| Allows you to insert commands before building the base image.
+| Enables you to insert commands before building the base image.
 
 | `append_base`
-| Allows you to insert commands after building the base image.
+| Enables you to insert commands after building the base image.
 
 | `prepend_galaxy`
-| Allows you to insert before building the galaxy image.
+| Enables you to insert before building the galaxy image.
 
 | `append_galaxy`
-| Allows you to insert after building the galaxy image.
+| Enables you to insert after building the galaxy image.
 
 | `prepend_builder`
-| Allows you to insert commands before building the Python builder image.
+| Enables you to insert commands before building the Python builder image.
 
 | `append_builder`
-| Allows you to insert commands after building the Python builder image.
+| Enables you to insert commands after building the Python builder image.
 
 | `prepend_final`
-| Allows you to insert before building the final image.
+| Enables you to insert before building the final image.
 
 | `append_final`
-| Allows you to insert after building the final image.
+| Enables you to insert after building the final image.
 
 |===
 
