--- a/downstream/assemblies/builder/assembly-definition-file-breakdown.adoc
+++ b/downstream/assemblies/builder/assembly-definition-file-breakdown.adoc
@@ -13,6 +13,7 @@ include::builder/con-galaxy-dependencies.adoc[leveloffset=+2]
 include::builder/con-python-dependencies.adoc[leveloffset=+2]
 include::builder/con-system-dependencies.adoc[leveloffset=+2]
 include::builder/ref-definition-file-images.adoc[leveloffset=+1]
+include::builder/ref-example-file-to-build-image.adoc[leveloffset=+2]
 include::builder/con-additional-build-files.adoc[leveloffset=+1]
 include::builder/con-additional-custom-build-steps.adoc[leveloffset=+1]
 
