--- a/downstream/modules/builder/ref-build-args-base-image.adoc
+++ b/downstream/modules/builder/ref-build-args-base-image.adoc
@@ -5,16 +5,16 @@
 The `build_arg_defaults` section of the definition file is a dictionary whose keys can provide default values for arguments to {Builder}. The following table lists values that can be used in `build_arg_defaults`:
 
 [cols="a,a"]
-|===
+|====
 | Value | Description
 
 | `ANSIBLE_GALAXY_CLI_COLLECTION_OPTS`
 | Allows the user to pass arbitrary arguments to the ansible-galaxy CLI during the collection installation phase. For example, the –pre flag to enable the installation of pre-release collections, or -c to disable verification of the server's SSL certificate.
 
 | `ANSIBLE_GALAXY_CLI_ROLE_OPTS`
-| Allows the user to pass any flags, such as –no-deps, to the role installation.
+| Allows the user to pass any flags, such as `–no-deps`, to the role installation.
 
-|===
+|====
 
 The values given inside `build_arg_defaults` are hard-coded into the `Containerfile`, so these values persist if `podman build` is called manually.
 
