AAP-35215: Updated Lightspeed docs for playbook generation'support on on-prem deployments

--- a/lightspeed/assemblies/assembly_generating-playbooks.adoc
+++ b/lightspeed/assemblies/assembly_generating-playbooks.adoc
@@ -16,7 +16,7 @@ These capabilities enable Ansible developers to use natural language prompts to 
 
 [NOTE]
 ====
-You can generate playbooks and view playbook explanations when connecting to the {LightspeedShortName} cloud service. These features are not yet available with {LightspeedShortName} on-premise deployments.
+You can generate playbooks and view playbook explanations when connecting to the {LightspeedShortName} cloud service and on-premise deployments.
 ====
 
 include::modules/con_playbook-generation-best-practices.adoc[leveloffset=+1]
