--- a/lightspeed/assemblies/assembly_configuring-lightspeed-onpremise.adoc
+++ b/lightspeed/assemblies/assembly_configuring-lightspeed-onpremise.adoc
@@ -12,9 +12,8 @@ ifdef::context[:parent-context: {context}]
 
 As an {PlatformName} administrator, you can set up a {LightspeedShortName} on-premise deployment and connect it to an {ibmwatsonxcodeassistant} instance. After the on-premise deployment is successful, you can start using the Ansible Lightspeed service with the Ansible Visual Studio (VS) Code extension. 
 
-The following capabilities are not yet supported on {LightspeedShortName} on-premise deployment:
+The following capability is not yet supported on {LightspeedShortName} on-premise deployments:
 
-* Generating playbooks and viewing playbook explanations
 * Viewing telemetry data on the Admin dashboard 
 
 [NOTE]
