Added mTLS for postgres to containerized install
Added module, and added variables to appendix

Containerized installation - Add certificate auth support (mTLS) for PostgreSQL external DB

https://issues.redhat.com/browse/AAP-36273

--- a/downstream/modules/platform/ref-hub-variables.adoc
+++ b/downstream/modules/platform/ref-hub-variables.adoc
@@ -134,6 +134,8 @@ Default = `5432`
 
 | `automationhub_pg_sslmode` | | _Required_
 
+Set to `verify-ca` or `verify-full` to enable mTLS authentication to the database 
+
 Default = `prefer`
 
 | `automationhub_pg_username` | `hub_pg_username` | The username for your {HubName} PostgreSQL database
