--- a/downstream/modules/platform/ref-database-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-database-inventory-variables.adoc
@@ -5,11 +5,122 @@
 [cols="50%,50%,50%",options="header"]
 |====
 | *RPM variable name* | *Container variable name* | *Description*
+//EDA database variables
+| `automationedacontroller_install_pg_host` | Configure the PostgreSQL host for {EDAName}, which can be an externally managed database. 
+
+For example, `automationedacontroller_install_pg_host=data.example.com`
+| `automationedacontroller_install_pg_port` | Configure the PostgreSQL port for {EDAName}. 
+
+For example, `automationedacontroller_install_pg_port=<port number>`
+| `automationedacontroller_install_pg_database` | Configure the PostgreSQL database for {EDAName}. 
+
+For example, `automationedacontroller_install_pg_database=<database name>`
+| `automationedacontroller_install_pg_username` | Configure the PostgreSQL username for {EDAName}. 
+
+For example, `automationedacontroller_install_pg_username=data.example.com`
+| `automationedacontroller_install_pg_password` | Configure the PostgreSQL password for {EDAName}. 
+
+This is not required if you enable mTLS authentication to the database.
+
+For example, `automationedacontroller_install_pg_password=<password>`
+| `automationedacontroller_pg_sslmode` | 
+
+Set to `verify-ca` or `verify-full` to enable mTLS authentication to the database.
+
+Default=`prefer`
+| `automationedacontroller_pg_client_sslcert` | Path to the certificate with mTLS authentication .
+
+For example, `automationedacontroller_pgclient_sslcert = /path/to/cert`
+
+| `automationedacontroller_pg_client_sslkey` | Path to the key with mTLS authentication.
+
+For example, `automationedacontroller_pgclient_sslkey = /path/to/key`
+//Platform gateway database variables
+| `automationgateway_install_pg_host` | Configure the PostgreSQL host for {Gateway}, which can be an externally managed database. 
+
+For example, `automationgateway_install_pg_host=data.example.com`
+| `automationgateway_install_pg_port` | Configure the PostgreSQL port for {Gateway}. 
+
+For example, `automationgateway_install_pg_port=<port number>`
+| `automationgateway_install_pg_database` | Configure the PostgreSQL database for {Gateway}. 
+
+For example, `automationgateway_install_pg_database=<database name>`
+| `automationgatewayinstall_pg_username` | Configure the PostgreSQL username for {Gateway}. 
+
+For example, `automationgateway_install_pg_username=data.example.com`
+| `automationgatewayt_install_pg_password` | Configure the PostgreSQL password for {HubName}. 
+
+This is not required if you enable mTLS authentication to the database.
+
+For example, `automationgateway_install_pg_password=<password>`
+
+| `automationgateway_pg_client_sslcert` | Path to the certificate with mTLS authentication.
+
+For example, `automationgateway_pgclient_sslcert = /path/to/cert`
+
+| `automationgateay_pg_client_sslkey` | Path to the key with mTLS authentication.
+
+For example, `automationgateway_pgclient_sslkey = /path/to/key`
+//Automation hub database variables
+| `automationhub_install_pg_host` | Configure the PostgreSQL host for {HubName}, which can be an externally managed database. 
+
+For example, `automationhub_install_pg_host=data.example.com`
+| `automationhub_install_pg_port` | Configure the PostgreSQL port for {HubName}. 
+
+For example, `automationhub_install_pg_port=<port number>`
+| `automationhub_install_pg_database` | Configure the PostgreSQL database for {HubName}. 
+
+For example, `automationhub_install_pg_database=<database name>`
+| `automationhub_install_pg_username` | Configure the PostgreSQL username for {HubName}. 
+
+For example, `automationhub_install_pg_username=data.example.com`
+| `automationhub_install_pg_password` | Configure the PostgreSQL password for {HubName}. 
+
+This is not required if you enable mTLS authentication to the database.
+
+For example, `automationhub_install_pg_password=<password>`
+| `automationedacontroller_pg_sslmode` | 
+
+Set to `verify-ca` or `verify-full` to enable mTLS authentication to the database.
+
+Default=`prefer`
+| `automationhub_pg_client_sslcert` | Path to the certificate with mTLS authentication.
+
+For example, `automationhub_pgclient_sslcert = /path/to/cert`
+
+| `automationhub_pg_client_sslkey` | Path to the key with mTLS authentication.
+
+For example, `automationhub_pgclient_sslkey = /path/to/key`
+//Automation controller database variables
+| | `awx_install_pg_host` | Configure the PostgreSQL host for {ControllerName}, which can be an externally managed database. 
+
+For example, `awx_install_host=data.example.com'
+| | `awx_install_pg_port` | Configure the PostgreSQL port for {ControllerName}. 
+
+For example, `awx_install_port=<port number>`
+| `awx_install_pg_database` | Configure the PostgreSQL database for {ControllerName}, which can be an externally managed database.
+
+For example, `awx_install_pg_database=<database name>`
+| `awx_install_pg_username` | Configure the username for the PostgreSQL database for {ControllerName}.
+
+This is not required if you enable mTLS authentication to the database.
+
+For example, `awx_install_pg_username=<username>`
 | `pg_ssl_mode` | | Choose one of the two available modes: `prefer` and `verify-full`. 
 
 Set to `verify-full` for client-side enforced SSL/TLS. 
 
+Set to `verify-ca` or `verify-full` to enable mTLS authentication to the database
+
 Default = `prefer`
+| `pg_client_ssl_cert` | Path to the certificate with mTLS authentication.
+
+For example, `pgclient_sslcert = /path/to/cert`
+
+| `pgclient_ssl_key` | Path to the key with mTLS authentication
+
+For example, `pgclient_sslkey=/path/to/key`
+
 | `postgres_ssl_cert` | `postgresql_tls_cert` | Location of the PostgreSQL SSL/TLS certificate.
 
 `/path/to/pgsql_ssl.cert`
