Added mTLS for postgres to containerized install
Guessed at contaainerized variables (placemarkers)

Containerized installation - Add certificate auth support (mTLS) for PostgreSQL external DB

https://issues.redhat.com/browse/AAP-36273

--- a/downstream/modules/platform/ref-database-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-database-inventory-variables.adoc
@@ -6,89 +6,89 @@
 |====
 | *RPM variable name* | *Container variable name* | *Description*
 //EDA database variables
-| `automationedacontroller_install_pg_host` | | Configure the PostgreSQL host for {EDAName}, which can be an externally managed database. 
+| `automationedacontroller_install_pg_host` | `eda_` | Configure the PostgreSQL host for {EDAName}, which can be an externally managed database. 
 
 For example, `automationedacontroller_install_pg_host=data.example.com`
-| `automationedacontroller_install_pg_port` | | Configure the PostgreSQL port for {EDAName}. 
+| `automationedacontroller_install_pg_port` | `eda_` | Configure the PostgreSQL port for {EDAName}. 
 
 For example, `automationedacontroller_install_pg_port=<port number>`
-| `automationedacontroller_install_pg_database` | | Configure the PostgreSQL database for {EDAName}. 
+| `automationedacontroller_install_pg_database` | `eda_` | Configure the PostgreSQL database for {EDAName}. 
 
 For example, `automationedacontroller_install_pg_database=<database name>`
-| `automationedacontroller_install_pg_username` | | Configure the PostgreSQL username for {EDAName}. 
+| `automationedacontroller_install_pg_username` | `eda_` | Configure the PostgreSQL username for {EDAName}. 
 
 For example, `automationedacontroller_install_pg_username=data.example.com`
-| `automationedacontroller_install_pg_password` | | Configure the PostgreSQL password for {EDAName}. 
+| `automationedacontroller_install_pg_password` | `eda_` | Configure the PostgreSQL password for {EDAName}. 
 
 This is not required if you enable mTLS authentication to the database.
 
 For example, `automationedacontroller_install_pg_password=<password>`
-| `automationedacontroller_pg_sslmode` | |
+| `automationedacontroller_pg_sslmode` | `eda_` |
 
 Set to `verify-ca` or `verify-full` to enable mTLS authentication to the database.
 
 Default=`prefer`
-| `automationedacontroller_pg_client_sslcert` | | Path to the certificate with mTLS authentication .
+| `automationedacontroller_pg_client_sslcert` | `eda_` | Path to the certificate with mTLS authentication .
 
 For example, `automationedacontroller_pgclient_sslcert = /path/to/cert`
 
-| `automationedacontroller_pg_client_sslkey` | | Path to the key with mTLS authentication.
+| `automationedacontroller_pg_client_sslkey` | `eda_` | Path to the key with mTLS authentication.
 
 For example, `automationedacontroller_pgclient_sslkey = /path/to/key`
 //Platform gateway database variables
-| `automationgateway_install_pg_host` | | Configure the PostgreSQL host for {Gateway}, which can be an externally managed database. 
+| `automationgateway_install_pg_host` | `gateway_` | Configure the PostgreSQL host for {Gateway}, which can be an externally managed database. 
 
 For example, `automationgateway_install_pg_host=data.example.com`
-| `automationgateway_install_pg_port` | | Configure the PostgreSQL port for {Gateway}. 
+| `automationgateway_install_pg_port` | `gateway_` | Configure the PostgreSQL port for {Gateway}. 
 
 For example, `automationgateway_install_pg_port=<port number>`
-| `automationgateway_install_pg_database` | | Configure the PostgreSQL database for {Gateway}. 
+| `automationgateway_install_pg_database` | `gateway_` | Configure the PostgreSQL database for {Gateway}. 
 
 For example, `automationgateway_install_pg_database=<database name>`
-| `automationgatewayinstall_pg_username` | | Configure the PostgreSQL username for {Gateway}. 
+| `automationgatewayinstall_pg_username` | `gateway_` | Configure the PostgreSQL username for {Gateway}. 
 
 For example, `automationgateway_install_pg_username=data.example.com`
-| `automationgatewayt_install_pg_password` | | Configure the PostgreSQL password for {HubName}. 
+| `automationgatewayt_install_pg_password` | `gateway_` | Configure the PostgreSQL password for {HubName}. 
 
 This is not required if you enable mTLS authentication to the database.
 
 For example, `automationgateway_install_pg_password=<password>`
 
-| `automationgateway_pg_client_sslcert` | | Path to the certificate with mTLS authentication.
+| `automationgateway_pg_client_sslcert` | `gateway_` | Path to the certificate with mTLS authentication.
 
 For example, `automationgateway_pgclient_sslcert = /path/to/cert`
 
-| `automationgateay_pg_client_sslkey` | | Path to the key with mTLS authentication.
+| `automationgateay_pg_client_sslkey` | `gateway_` | Path to the key with mTLS authentication.
 
 For example, `automationgateway_pgclient_sslkey = /path/to/key`
 //Automation hub database variables
-| `automationhub_install_pg_host` | | Configure the PostgreSQL host for {HubName}, which can be an externally managed database. 
+| `automationhub_install_pg_host` | `hub_` | Configure the PostgreSQL host for {HubName}, which can be an externally managed database. 
 
 For example, `automationhub_install_pg_host=data.example.com`
-| `automationhub_install_pg_port` | | Configure the PostgreSQL port for {HubName}. 
+| `automationhub_install_pg_port` | `hub_` | Configure the PostgreSQL port for {HubName}. 
 
 For example, `automationhub_install_pg_port=<port number>`
-| `automationhub_install_pg_database` | | Configure the PostgreSQL database for {HubName}. 
+| `automationhub_install_pg_database` | `hub_` | Configure the PostgreSQL database for {HubName}. 
 
 For example, `automationhub_install_pg_database=<database name>`
-| `automationhub_install_pg_username` | | Configure the PostgreSQL username for {HubName}. 
+| `automationhub_install_pg_username` | `hub_` | Configure the PostgreSQL username for {HubName}. 
 
 For example, `automationhub_install_pg_username=data.example.com`
-| `automationhub_install_pg_password` | | Configure the PostgreSQL password for {HubName}. 
+| `automationhub_install_pg_password` | `hub_` | Configure the PostgreSQL password for {HubName}. 
 
 This is not required if you enable mTLS authentication to the database.
 
 For example, `automationhub_install_pg_password=<password>`
-| `automationedacontroller_pg_sslmode` | |
+| `automationhub_pg_sslmode` | `hub_` |
 
 Set to `verify-ca` or `verify-full` to enable mTLS authentication to the database.
 
 Default=`prefer`
-| `automationhub_pg_client_sslcert` | | Path to the certificate with mTLS authentication.
+| `automationhub_pg_client_sslcert` | `hub_` | Path to the certificate with mTLS authentication.
 
 For example, `automationhub_pgclient_sslcert = /path/to/cert`
 
-| `automationhub_pg_client_sslkey` | | Path to the key with mTLS authentication.
+| `automationhub_pg_client_sslkey` | `hub_` | Path to the key with mTLS authentication.
 
 For example, `automationhub_pgclient_sslkey = /path/to/key`
 //Automation controller database variables
