Adding further details re custom inventory script

--- a/downstream/modules/platform/ref-controller-scm-inv-source-fields.adoc
+++ b/downstream/modules/platform/ref-controller-scm-inv-source-fields.adoc
@@ -36,6 +36,12 @@ You can perform an inventory update while a related job is running.
 
 {ControllerNameStart} uses the `ansible-inventory` module from Ansible to process inventory files, and supports all valid inventory syntax that {ControllerName} requires.
 
+[IMPORTANT]
+====
+You do not need to write inventory scripts in Python.
+You can enter any executable file in the source field and must run `chmod +x` for that file and check it into Git.
+====
+
 The following is a working example of JSON output that {ControllerName} can read for the import:
 
 ----
@@ -85,4 +91,8 @@ The following is a working example of JSON output that {ControllerName} can read
 } 
 ----
 
-For information on how to implement the inventory script, see the support article, link:https://access.redhat.com/solutions/6997130[How to migrate inventory scripts from Red Hat Ansible tower to Red Hat Ansible Automation Platform?].
+.Additional resources
+
+* For examples of inventory files, see link:https://github.com/ansible/test-playbooks/tree/main/inventories[test-playbooks/inventories].
+* For an example of an inventory script inside of that, see link:https://github.com/ansible/test-playbooks/blob/main/inventories/changes.py[inventories/changes.py].
+* For information about how to implement the inventory script, see the support article, link:https://access.redhat.com/solutions/6997130[How to migrate inventory scripts from Red Hat Ansible tower to Red Hat Ansible Automation Platform?].
